--- a/gemspec.yml
+++ b/gemspec.yml
@@ -9,7 +9,7 @@ has_rdoc: yard
 requirements: libc
 
 dependencies:
-  ffi: >= 0.6.0, <= 1.1.0
+  ffi: ~> 1.0
 
 development_dependencies:
   ore-tasks: ~> 0.4
