--- a/gemspec.yml
+++ b/gemspec.yml
@@ -12,6 +12,6 @@ dependencies:
   ffi: ~> 1.0
 
 development_dependencies:
-  ore-tasks: ~> 0.4
+  rubygems-tasks: ~> 0.1.0.pre1
   rspec: ~> 2.4
   yard: ~> 0.7.0
