--- a/gemspec.yml
+++ b/gemspec.yml
@@ -12,6 +12,4 @@ dependencies:
   ffi: ~> 1.0
 
 development_dependencies:
-  rubygems-tasks: ~> 0.1
-  rspec: ~> 2.4
-  yard: ~> 0.7.0
+  bundler: ~> 2.0
